# Discord-Agent-Tools

./: README.md
command-listener/: PROMPT Build Discord Command.txt  install.sh  pyproject.toml
command-listener/command_listener/: config.py  dispatcher.py  gateway.py  main.py  rest.py
command-listener/command_listener/commands/: status.py
report_cost/: BUILD cost report py.md  cost-report.py  cost_pricing.json
system_watchdog/: BUILD system watchdog.md  system_watchdog.py
